--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "react-scroll": "^1.9.0"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
